Fix Projects grid spacing and replace image sizes with 4:5 aspect ratio for desktop version.

--- a/css/main.css
+++ b/css/main.css
@@ -79,20 +79,14 @@ body {
   .footer--sticky,
   .page-footer-nav {
     text-align: left; } }
-@media (min-width: 991px) {
-  .page-thumbnail {
-    position: absolute;
-    bottom: 0; }
-    .page-thumbnail-container {
-      position: relative;
-      height: 425px; } }
-@media (min-width: 768px) and (max-width: 992px) {
-  .page-thumbnail-container {
-    height: 270px; }
-  .page-thumbnail img {
-    height: 240px; } }
-@media (max-width: 992px) {
+.page-thumbnail img {
+  margin-bottom: 0.5em; }
+
+@media (min-width: 768px) {
   .layout--3col .page-row {
-    margin-bottom: 0.5em; } }
+    margin-bottom: 4em; } }
+@media (max-width: 767px) {
+  .page-thumbnail-container {
+    margin-bottom: 4em; } }
 
 /*# sourceMappingURL=main.css.map */
